--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -1,122 +1,91 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>동행 미니게임 가이드 | 88 커뮤니티</title>
-<meta name="description" content="동행 파워볼·키노사다리·동키노 유저를 위한 마진/EV 참고 도구 + 추천 카드 TOP3.">
-<link rel="canonical" href="https://88st.cloud/landing-b/">
-<meta name="robots" content="index,follow">
-<style>
-*{box-sizing:border-box}
-body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;background:#0b0b0b;color:#fff}
-.wrap{max-width:980px;margin:0 auto;padding:18px 14px 28px}
-.hero{background:rgba(18,18,18,.9);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45)}
-.h-title{font-weight:900;color:#f5e27a;font-size:18px;line-height:1.25;margin:0}
-.h-sub{margin:10px 0 0;color:#cfcfcf;font-size:13px;line-height:1.6}
-.cta{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-.btn{flex:1;min-width:190px;border:none;border-radius:14px;padding:12px;font-weight:900;cursor:pointer;text-decoration:none;display:block;text-align:center}
-.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-.secondary{background:#1f1f1f;color:#fff;border:1px solid rgba(255,255,255,.08)}
-.section{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:14px;box-shadow:0 10px 26px rgba(0,0,0,.45)}
-.s-title{font-weight:900;color:#f5e27a;font-size:14px;margin:0 0 10px}
-.mini-row{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
-@media(max-width:760px){.mini-row{grid-template-columns:1fr}}
-.mini-card{position:relative;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:12px;cursor:pointer;overflow:hidden}
-.mini-badge{display:inline-block;padding:4px 8px;border-radius:999px;font-weight:900;font-size:11px;margin-bottom:8px;color:#111;background:linear-gradient(135deg,#d4af37,#f5e27a)}
-.mini-badge.ad{background:rgba(255,255,255,.14);color:#fff;border:1px solid rgba(255,255,255,.14)}
-.mini-name{font-weight:900}
-.mini-sub{margin-top:6px;font-size:12px;color:#cfcfcf;line-height:1.4}
-.footer{margin-top:14px;color:#9a9a9a;font-size:12px;line-height:1.55;text-align:center}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>고액 유저 보증업체 선택 가이드 | 88(팔팔커뮤니티)</title>
+  <meta name="description" content="고액 유저 기준으로 보증업체(검증 업체)를 고를 때 확인해야 할 안전 체크리스트와 88 인증 놀이터 운영 기준을 안내합니다.">
+  <meta name="keywords" content="보증업체,검증업체,고액유저,출금,안전">
+  <link rel="canonical" href="https://88st.cloud/landing-b/">
+  <meta name="robots" content="index,follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="88 (팔팔커뮤니티)">
+  <meta property="og:title" content="고액 유저 보증업체 선택 가이드 | 88(팔팔커뮤니티)">
+  <meta property="og:description" content="고액 유저 기준으로 보증업체(검증 업체)를 고를 때 확인해야 할 안전 체크리스트와 88 인증 놀이터 운영 기준을 안내합니다.">
+  <meta property="og:url" content="https://88st.cloud/landing-b/">
+
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+  <style>
+    *{box-sizing:border-box}
+    :root{--bg:#0b0b0b;--panel:#121212;--gold:#d4af37;--gold2:#f5e27a;--muted:#cfcfcf}
+    body{
+      margin:0;
+      background:
+        radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+        radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
+        linear-gradient(180deg, #07070a, var(--bg));
+      font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+      color:#fff;
+    }
+    .wrap{max-width:920px;margin:0 auto;padding:18px 14px 28px}
+    .top{display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
+    .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:#fff}
+    .brand img{width:42px;height:42px;object-fit:contain;filter: drop-shadow(0 0 12px rgba(212,175,55,.22));}
+    .brand strong{font-weight:900}
+    .nav{display:flex;gap:10px;flex-wrap:wrap}
+    .btn{display:inline-block;padding:10px 12px;border-radius:12px;font-weight:900;text-decoration:none}
+    .btn.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
+    .btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#0b0b0b}
+    .panel{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
+    h1{margin:0 0 10px;font-size:20px;font-weight:900;color:var(--gold2);}
+    p{margin:10px 0;color:var(--muted);line-height:1.65;font-size:14px}
+    ul{margin:10px 0 0;padding-left:18px;color:var(--muted);line-height:1.65}
+    .faq{margin-top:14px}
+    .faq h2{margin:0 0 10px;font-size:14px;font-weight:900;color:var(--gold2)}
+    details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
+    details+details{margin-top:10px}
+    summary{cursor:pointer;font-weight:900;list-style:none}
+    summary::-webkit-details-marker{display:none}
+    .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
+    .foot{margin-top:18px;color:#9a9a9a;font-size:12px;line-height:1.55}
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="hero">
-    <h1 class="h-title">동행 미니게임 유저용 랜딩</h1>
-    <div class="h-sub">파워볼/키노사다리/동키노 등 미니게임 유저가 자주 보는 ‘입플’·‘대응’ 기준을 빠르게 확인할 수 있게 구성했습니다.</div>
-    <div class="cta">
-      <a class="btn primary" href="/">마진·EV 분석기 사용</a>
-      <a class="btn secondary" href="/?open=card1">추천 카드 바로 보기</a>
+  <div class="wrap">
+    <div class="top">
+      <a class="brand" href="/" aria-label="88 메인으로 이동">
+        <img src="/img/logo.png" alt="88 로고" loading="lazy" decoding="async">
+        <strong>88 (팔팔커뮤니티)</strong>
+      </a>
+      <div class="nav">
+        <a class="btn primary" href="/analysis/">분석기 바로가기</a>
+        <a class="btn gold" href="/#vendorTop">인증놀이터 보기</a>
+        <a class="btn" style="background:rgba(255,255,255,.08);color:#fff;border:1px solid rgba(255,255,255,.10)" href="/">메인으로</a>
+      </div>
+    </div>
+
+    <div class="panel">
+      <h1>고액 유저 기준 ‘보증업체’ 체크리스트</h1>
+      <p>보증업체를 고를 때 가장 중요한 건 ‘출금 안정성’과 ‘대응 채널의 일관성’입니다. 이벤트가 화려해도 출금 지연/연락 두절이 잦으면 리스크가 커집니다. 특히 고액 이용자는 작은 변수도 금액으로 확대되니 보수적으로 접근하는 게 안전합니다.</p>
+<p>88 인증 놀이터는 운영 이력, 커뮤니티 피드백, 혜택 조건의 명확성(가입코드/적용 범위), 문의/대응 가능 여부를 중심으로 정리합니다. 단기 이벤트 위주로 급변하는 곳은 제외하는 방향으로 관리합니다.</p>
+<p>팁: 사칭 계정이 많으니 공식 관리자 텔레그램(@UZU59) 단 하나만 확인하세요. 링크를 받더라도 계정/아이디를 먼저 검증하는 습관이 필요합니다.</p>
+
+      <div class="faq">
+        <h2>FAQ</h2>
+        <details><summary>보증업체는 무엇을 보증하나요?</summary><div class="a">‘무조건 안전’의 의미가 아니라, 운영 이력/대응 채널/커뮤니티 검증 정보를 바탕으로 상대적으로 리스크가 낮은 곳을 선별해 안내한다는 의미에 가깝습니다.</div></details>
+<details><summary>고액 유저는 어떤 점을 추가로 봐야 하나요?</summary><div class="a">한도/출금 속도/정산 방식, 고객센터 대응 시간대, 이슈 발생 시 처리 기록(커뮤니티 피드백)을 더 꼼꼼히 확인하는 게 좋습니다.</div></details>
+<details><summary>사칭을 피하려면 어떻게 하나요?</summary><div class="a">공식 계정 아이디를 고정으로 외워두고, 링크 클릭 전 ‘아이디가 정확히 일치하는지’부터 확인하세요.</div></details>
+      </div>
+
+      <div class="foot">
+        ※ 본 페이지의 안내/도구 결과는 참고용이며, 최종 판단과 책임은 이용자에게 있습니다.<br>
+        빠른 이동: <a href="/analysis/" style="color:#78d6ff;text-decoration:none;font-weight:900;">분석기</a> ·
+        <a href="/#vendorTop" style="color:#f5e27a;text-decoration:none;font-weight:900;">88 인증 놀이터</a>
+      </div>
     </div>
   </div>
-
-  <div class="section">
-    <div class="s-title">추천 카드 요약 TOP3</div>
-    <div class="mini-row" id="recRow"></div>
-  </div>
-
-  <div class="footer">
-    ※ 본 페이지는 참고용 안내입니다. 손실을 감당 가능한 범위 내에서 이용하세요.<br>
-    문의: <a href="https://t.me/UZU59" target="_blank" rel="noopener" style="color:#45b3ff;text-decoration:none;font-weight:900">@UZU59</a>
-  </div>
-</div>
-
-<script>
-const CARD_DATA = {
-  card1:{ title:"B WIN", code:"AS88", link:"https://bwk999.com", telegram:"UZU59",
-    benefit:"고액전용 USDT 무기명가입 수수료지원 / 모든게임 입금플러스",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card2:{ title:"CAPS", code:"RUST", link:"https://caps-22.com", telegram:"UZU59",
-    benefit:"고액전용 미겜 첫충 5% / 페이백 5% / 출석 30만원",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card3:{ title:"BETZY", code:"BANGU", link:"https://b88-et.com", telegram:"UZU59",
-    benefit:"스포츠 첫 10% / 미겜 첫 5% / 페이백 5%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
-    benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card5:{ title:"LULA BET", code:"ZZ99", link:"https://lula.ws", telegram:"PSC991",
-    benefit:"원화·USDT 무기명가입 / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-  card6:{ title:"CHOY BET", code:"TAN", link:"https://cy-40.com", telegram:"DY0302",
-    benefit:"신규 30% / 매충 10% / 페이백 10%",
-    notice:"가입코드 미입력 시 혜택 적용 불가" },
-
-  /* ✅ 광고 모집 카드 */
-  card7:{ title:"광고/제휴 모집", code:"", link:"", telegram:"UZU59",
-    benefit:"88 커뮤니티에 광고/제휴를 원하시면 문의 주세요.",
-    notice:"광고 문의는 텔레그램 @UZU59 로만 진행합니다." },
-
-  card8:{ title:"광고 자리 오픈", code:"", link:"", telegram:"UZU59",
-    benefit:"배너/카드 광고 자리 오픈 · 합리적 조건",
-    notice:"사칭 주의: 공식 관리자 @UZU59 단 하나" }
-};
-
-function escapeHtml(s){
-  return String(s||"").replace(/[&<>"']/g, m=>({"&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"}[m]));
-}
-function getClick(id){
-  return Number(localStorage.getItem("88_click_"+id) || 0);
-}
-function badgeText(d, id){
-  if(d.recruit) return { text:"광고모집", cls:"ad" };
-  if(d.tag==="rec") return { text:"추천", cls:"" };
-  if(d.tag==="new") return { text:"신규", cls:"" };
-  if(d.tag==="ad") return { text:"광고", cls:"ad" };
-  return { text:"일반", cls:"ad" };
-}
-(function renderRecTop3(){
-  const row = document.getElementById("recRow");
-  const recIds = Object.keys(CARD_DATA).filter(id=> CARD_DATA[id] && CARD_DATA[id].tag==="rec" && !CARD_DATA[id].recruit);
-  const sorted = recIds.slice().sort((a,b)=> getClick(b)-getClick(a));
-  const top = (sorted.length?sorted:recIds).slice(0,3);
-  row.innerHTML = top.map(id=>{
-    const d=CARD_DATA[id];
-    const b=badgeText(d,id);
-    const href="/?open="+encodeURIComponent(id);
-    return `
-      <div class="mini-card" data-href="${href}">
-        <div class="mini-badge ${b.cls}">${escapeHtml(b.text)}</div>
-        <div class="mini-name">${escapeHtml(d.title)}</div>
-        <div class="mini-sub">${escapeHtml((d.benefit||"").slice(0,64))}${(d.benefit && d.benefit.length>64)?"…":""}</div>
-      </div>
-    `;
-  }).join("");
-  row.querySelectorAll(".mini-card").forEach(el=>{
-    el.addEventListener("click", ()=> location.href = el.dataset.href);
-  });
-})();
-</script>
 </body>
 </html>
